# pyconceptev

./: .pre-commit-config.yaml  AUTHORS  CNAME  CONTRIBUTING.md  CONTRIBUTORS.md  README.rst  SECURITY.md  index.html  pyproject.toml  robots.txt  sitemap.xml  tox.ini  versions.json
.github/: labels.yml
.github/workflows/: ci_cd.yml  label.yml
doc/: Makefile  make.bat
doc/changelog.d/: 36.changed.md  37.miscellaneous.md  38.dependencies.md  39.changed.md  40.changed.md  41.miscellaneous.md  43.changed.md  44.changed.md  45.changed.md  46.changed.md  47.changed.md  49.changed.md  50.miscellaneous.md  52.changed.md  55.miscellaneous.md  56.dependencies.md  57.dependencies.md  58.dependencies.md  59.changed.md  60.dependencies.md  61.changed.md  62.changed.md  63.changed.md  66.changed.md  68.changed.md  70.dependencies.md  71.dependencies.md  74.dependencies.md  75.dependencies.md  76.dependencies.md  78.added.md
doc/source/: api_ref.rst  changelog.rst  conf.py  contributing.rst  getting_started.rst  index.rst  user_guide.rst
doc/source/_static/: README.md
doc/styles/config/vocabularies/ANSYS/: accept.txt
examples/: index.rst  simple_workflow.py
src/ansys/conceptev/core/: __init__.py  app.py  auth.py  e9.lab  main.py
src/ansys/conceptev/core/resources/: config.toml
tests/: test_app.py  test_auth.py  test_integration.py  test_main.py  test_metadata.py
version/: index.html
version/0.1/: .buildinfo  contributing.html  genindex.html  index.html  objects.inv  searchindex.js
version/0.1/examples/: index.html
version/dev/: .buildinfo  api_ref.html  changelog.html  contributing.html  genindex.html  getting_started.html  index.html  objects.inv  search.html  searchindex.js  user_guide.html
version/dev/_sources/: changelog.rst.txt
version/dev/_static/: custom.css
version/dev/examples/: index.html  simple_workflow.html  simple_workflow.ipynb
version/stable/: api_ref.html  changelog.html  getting_started.html  index.html  search.html  user_guide.html
version/stable/_sources/: getting_started.rst.txt  index.rst.txt
version/stable/examples/: simple_workflow.html  simple_workflow.ipynb
