[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
# Check https://python-poetry.org/docs/pyproject/ for all available sections
name = "ansys-conceptev-core"
description = "A Python wrapper for Ansys Conceptev core"
version = "0.2.dev0"
license = "MIT"
authors = ["ANSYS, Inc. <pyansys.core@ansys.com>"]
maintainers = ["ANSYS, Inc. <pyansys.core@ansys.com>"]
repository = "https://github.com/ansys/pyconceptev"
documentation = "https://conceptev.docs.pyansys.com"
readme = "README.rst"
keywords = [
  "Ansys",
  "Concept EV",
  "Electric Powertrain",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
packages = [
    { include = "ansys", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
importlib-metadata = {version = "^7.0", python = "<3.8"}
python-dotenv = "^1.0.0"
httpx = "^0.26.0"

# Common packages for test and examples
[tool.poetry.group.dev.dependencies]
plotly = "^5.18.0"
tox = "^4.15.1"
pytest-cov = "^5.0.0"
pre-commit = "^3.7.1"

# Optional documentation dependencies
[tool.poetry.group.doc]
optional = true

[tool.poetry.group.doc.dependencies]
ansys-sphinx-theme = "^0.16.5"
ipython = "^8.1"
ipywidgets = "^8.1.3"
jupyterlab = "^4.2.2"
jupytext = "^1.15"
nbconvert = "^7.16.4"
nbsphinx = "^0.9.3"
numpydoc = "^1.5.0"
pypandoc = "^1.13"
recommonmark = "^0.7.1"
Sphinx = "^7.2.6"
sphinx-autobuild = "^2024.4.16"
sphinx-autodoc-typehints = "^2.1.1"
sphinx-copybutton = "^0.5.1"
sphinx-design = "^0.6.0"

# Optional testing dependencies
[tool.poetry.group.tests]
optional = true

[tool.poetry.group.tests.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
pytest-httpx = "^0.29.0"
pytest-mock = "^3.12.0"

# Optional build requirements
[tool.poetry.group.build]
optional = true

[tool.poetry.group.build.dependencies]
build = "^1.0.3"
twine = "^5.0.0"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 100
default_section = "THIRDPARTY"
src_paths = ["doc", "src", "tests"]
skip_gitignore = true

[tool.coverage.run]
source = ["ansys.conceptev.core"]

[tool.coverage.report]
show_missing = true

[tool.towncrier]
package = "ansys.conceptev.core"
directory = "doc/changelog.d"
filename = "doc/source/changelog.rst"
start_string = ".. towncrier release notes start\n"
template = "doc/changelog.d/changelog_template.jinja"
title_format = "`{version} <https://github.com/ansys/pyconceptev/releases/tag/v{version}>`_ - {project_date}"
issue_format = "`#{issue} <https://github.com/ansys/pyconceptev/pull/{issue}>`_"

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "dependencies"
name = "Dependencies"
showcontent = true

[[tool.towncrier.type]]
directory = "miscellaneous"
name = "Miscellaneous"
showcontent = true
